[build-system]
requires = [
  "setuptools",
  # Newer than NEP29-minimum: compile against oldest numpy available
  "numpy==1.24; python_version >= '3.11'",
  "numpy==1.22; python_version >= '3.10' and python_version < '3.11'",
  # NEP29-minimum as of Jan 31, 2023
  "numpy==1.21; python_version >= '3.7' and python_version < '3.10'",
]
build-backend = "setuptools.build_meta"

[project]
name = "gradunwarp"
version = "1.2.1+HCP"
description = "HCP version of Gradient Unwarping Package for Python/Numpy"
authors = [{name = "Human Connectome Project"}]
