[build-system]
requires = [
  "setuptools",
  # Newer than NEP29-minimum: compile against oldest numpy available
  "numpy==1.24; python_version >= '3.11'",
  "numpy==1.22; python_version >= '3.10' and python_version < '3.11'",
  # NEP29-minimum as of Jan 31, 2023
  "numpy==1.21; python_version >= '3.7' and python_version < '3.10'",
]
build-backend = "setuptools.build_meta"

[project]
name = "gradunwarp"
version = "v1.2.2.dev"
description = "HCP version of Gradient Unwarping Package for Python/Numpy"
authors = [{name = "Human Connectome Project"}]
dependencies = [
  "nibabel >= 3.2.1; python_version >= '3.0'",
  "nibabel >= 2.0; python_version < '3.0'",
  "numpy",
  "scipy",
]

[tool.bumpver]
current_version = "v1.2.2.dev"
version_pattern = "vMAJOR.MINOR.PATCH[.TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"version.txt" = [
    "^{version}",
]
