[build-system]
requires = [
  "setuptools",
  # Numpy 1.25 allows back-compiling and supports 3.9
  "numpy==1.25; python_version >= '3.9'",
  # Last version to support 3.6-3.8
  "numpy==1.19; python_version < '3.9'",
]
build-backend = "setuptools.build_meta"

[project]
name = "gradunwarp"
version = "v1.2.2.dev"
description = "HCP version of Gradient Unwarping Package for Python/Numpy"
authors = [{name = "Human Connectome Project"}]
dependencies = [
  "nibabel >= 3.2.1; python_version >= '3.0'",
  "nibabel >= 2.0; python_version < '3.0'",
  "numpy",
  "scipy",
]

[tool.bumpver]
current_version = "v1.2.2.dev"
version_pattern = "vMAJOR.MINOR.PATCH[.TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"version.txt" = [
    "^{version}",
]
