[metadata]
name = gradunwarp
version = v1.2.2.dev
description = HCP version of Gradient Unwarping Package for Python/Numpy
author = Human Connectome Project

[options]
packages = find:
install_requires =
  nibabel >= 3.2.1; python_version >= '3.0'
  nibabel >= 2.0; python_version < '3.0'
  numpy
  scipy
