[metadata]
name = gradunwarp
version = file:version.txt
description = HCP version of Gradient Unwarping Package for Python/Numpy
author = Human Connectome Project
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
  nibabel >= 3.2.1; python_version >= '3.0'
  nibabel >= 2.0; python_version < '3.0'
  numpy>=1.26.0b1; python_version > '3.11'
  numpy; python_version <= '3.11'
  scipy
